Added banner element to html

--- a/index.html
+++ b/index.html
@@ -18,12 +18,21 @@
           <li><a href="">Portfolio</a><span>/</span></li>
           <li><a href="">Clients</a><span>/</span></li>
           <li><a href="">Contact</a><span>/</span></li>
-          
         </ul>
       </nav>
     </div>
   </header>
-  <div id="lead-banner"></div>
+  <div id="lead-banner">
+    <img src="./images/banner.jpg" alt="banner">
+    <div class="banner-overlay">
+      <div class="wrapper">
+        <div class="banner-title">We Know Web Design</div>
+        <p>With over 15 years of experience you can be sure your website is in safe hands</p>
+        <a href="">View Our Work</a>
+      </div>
+    </div>
+  </div>
+
   <div id="main-content">
     <section></section>
     <section></section>
