Finalized html, added social media icons

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <header>
     <div class="wrapper">
@@ -34,10 +36,61 @@
   </div>
 
   <div id="main-content">
-    <section></section>
-    <section></section>
-    <section></section>
+    <div class="wrapper">
+      <section id="points-of-sale">
+        <h2>Point of Sale</h2>
+        <ul>
+          <li>
+            <img src="https://picsum.photos/200/300" alt="random image">
+            <h3>Web Design</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est reprehenderit similique ab magni
+              voluptates commodi, laborum id nemo impedit et, rem repudiandae minus voluptas dicta aperiam laboriosam
+              deserunt corporis.</p>
+          </li>
+          <li>
+            <img src="https://picsum.photos/200/300" alt="random image">
+            <h3>E-commerce</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est reprehenderit similique ab magni
+              voluptates commodi, laborum id nemo impedit et, rem repudiandae minus voluptas dicta aperiam laboriosam
+              deserunt corporis.</p>
+          </li>
+          <li>
+            <img src="https://picsum.photos/200/300" alt="random image">
+            <h3>SEO</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est reprehenderit similique ab magni
+              voluptates commodi, laborum id nemo impedit et, rem repudiandae minus voluptas dicta aperiam laboriosam
+              deserunt corporis.</p>
+          </li>
+        </ul>
+      </section>
+      <section id="clients">
+        <h2>What Our Clients Say</h2>
+        <img src="https://picsum.photos/200/300" alt="random image">
+        <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid beatae sunt sint itaque inventore
+          soluta.</blockquote>
+      </section>
+      <section id="contact">
+        <h2>Drop us a line</h2>
+        <ul id="conatc-methods">
+          <li>555 555 5555</li>
+          <li>hello@whatever.com</li>
+          <li>
+            <span>Leaf Studios</span>
+            <span>Times Square</span>
+            <span>NY</span>
+          </li>
+        </ul>
+        <img src="./images/map.jpg" alt="map">
+        <ul id="social-nav">
+          <li class="facebook"><a href="./images/facebook.png">Facebook</a></li>
+          <li class="twitter"><a href="./images/twitter.png">Twitter</a></li>
+          <li class="pinterest"><a href="./images/pinterest.png">Pinterest</a></li>
+          <li class="linkedin"><a href="./images/linkedin.png">LinkedIn</a></li>
+        </ul>
+      </section>
+    </div>
   </div>
-  
+
 </body>
+
 </html>
