--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Document</title>
 </head>
 
@@ -41,21 +42,21 @@
         <h2>Point of Sale</h2>
         <ul>
           <li>
-            <img src="https://picsum.photos/200/300" alt="random image">
+            <img src="https://picsum.photos/id/1057/300/200" alt="random image">
             <h3>Web Design</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est reprehenderit similique ab magni
               voluptates commodi, laborum id nemo impedit et, rem repudiandae minus voluptas dicta aperiam laboriosam
               deserunt corporis.</p>
           </li>
           <li>
-            <img src="https://picsum.photos/200/300" alt="random image">
+            <img src="https://picsum.photos/id/1069/300/200" alt="random image">
             <h3>E-commerce</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est reprehenderit similique ab magni
               voluptates commodi, laborum id nemo impedit et, rem repudiandae minus voluptas dicta aperiam laboriosam
               deserunt corporis.</p>
           </li>
           <li>
-            <img src="https://picsum.photos/200/300" alt="random image">
+            <img src="https://picsum.photos/id/164/300/200" alt="random image">
             <h3>SEO</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda est reprehenderit similique ab magni
               voluptates commodi, laborum id nemo impedit et, rem repudiandae minus voluptas dicta aperiam laboriosam
@@ -65,7 +66,7 @@
       </section>
       <section id="clients">
         <h2>What Our Clients Say</h2>
-        <img src="https://picsum.photos/200/300" alt="random image">
+        <img src="https://picsum.photos/id/174/300/200" alt="random image">
         <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid beatae sunt sint itaque inventore
           soluta.</blockquote>
       </section>
