Added social and contact styles

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       </section>
       <section id="contact">
         <h2>Drop us a line</h2>
-        <ul id="conatc-methods">
-          <li>555 555 5555</li>
-          <li>hello@whatever.com</li>
-          <li>
+        <ul id="contact-methods">
+          <li id="phone-sprite">555 555 5555</li>
+          <li id="email-sprite">hello@whatever.com</li>
+          <li id="address-sprite">
             <span>Leaf Studios</span>
             <span>Times Square</span>
             <span>NY</span>
@@ -83,10 +83,10 @@
         </ul>
         <img src="./images/map.jpg" alt="map">
         <ul id="social-nav">
-          <li class="facebook"><a href="./images/facebook.png">Facebook</a></li>
-          <li class="twitter"><a href="./images/twitter.png">Twitter</a></li>
-          <li class="pinterest"><a href="./images/pinterest.png">Pinterest</a></li>
-          <li class="linkedin"><a href="./images/linkedin.png">LinkedIn</a></li>
+          <li class="facebook"><a href="https://facebook.com" target="_blank">Facebook</a></li>
+          <li class="twitter"><a href="https://twitter.com" target="_blank">Twitter</a></li>
+          <li class="pinterest"><a href="https://www.pinterest.com" target="_blank">Pinterest</a></li>
+          <li class="linkedin"><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
         </ul>
       </section>
     </div>
